--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-phonenumber-field==7.1.0
 phonenumbers==8.13.17
 pydantic==2.1.1
 pydantic_core==2.4.0
+python-decouple==3.8
 six==1.16.0
 soupsieve==2.4.1
 sqlparse==0.4.4
